--- a/src/style/components/_footer.scss
+++ b/src/style/components/_footer.scss
@@ -36,6 +36,7 @@
     background-size: cover;
     position: absolute;
     bottom: 0;
+    left: 0;
     transition: all 0.1s linear;
     padding-top: 50px;
     .date {
